<resources>
    <string name="app_name">Secure Space</string>
    <string name="app_name_full">Secure Space</string>
    <string name="instructions">\tLong click on map to place the marker\n\tLong click on marker to drag it</string>
    <string name="common_app_passwordVault_name">Password Vault</string>
    <string name="common_app_messageEncryptor_name">Message Encryptor</string>
    <string name="common_app_fileEncryptor_name">File Encryptor</string>
    <string name="common_app_settings_name">Settings</string>
    <string name="common_app_otherUtils_name">Other Utils</string>
    <string name="common_returnToMainMenuTitle">Return to Main Menu</string>
    <string name="common_ok_text">OK</string>
    <string name="common_cancel_text">Cancel</string>
    <string name="common_yes_text">Yes</string>
    <string name="common_no_text">No</string>
    <string name="common_algorithm_text">Algorithm</string>
    <string name="common_benchmark_text">Benchmark</string>
    <string name="common_deleting_text">Deleting</string>
    <string name="common_question_delete">Do you want to delete &lt;b&gt;&lt;1&gt;&lt;/b&gt;?</string>
    <string name="common_question_wipe">Do you want to delete (with Wiping) &lt;b&gt;&lt;1&gt;&lt;/b&gt;?</string>
    <string name="common_question_leave">Do you want to leave &lt;b&gt;&lt;1&gt;&lt;/b&gt;?</string>
    <string name="common_question_saveChanges">Do you want to save changes?</string>
    <string name="common_question_delete_confirm">Selected item has been deleted.</string>
    <string name="common_name_text">Name</string>
    <string name="common_password_text">Password</string>
    <string name="common_comment_text">Comment</string>
    <string name="common_notes_text">Notes</string>
    <string name="common_delete_text">Delete</string>
    <string name="common_save_text">Save</string>
    <string name="common_edit_text">Edit</string>
    <string name="common_item_text">Item</string>
    <string name="common_folder_text">Folder</string>
    <string name="common_file_text">File</string>
    <string name="common_new_text">New</string>
    <string name="common_message_text">Message</string>
    <string name="common_toMainPage">Main Menu</string>
    <string name="common_enter_text">Enter</string>
    <string name="common_leave_text">Leave</string>
    <string name="common_copy_text">Copy</string>
    <string name="common_paste_text">Paste</string>
    <string name="common_encrypt_text">Encrypt</string>
    <string name="common_decrypt_text">Decrypt</string>
    <string name="common_moveTo_text">Move to</string>
    <string name="common_moveToFolder_text">Move to Folder</string>
    <string name="common_moreDots_text">More...</string>
    <string name="common_importVault_text">Import Vault</string>
    <string name="common_error_invalid_password_file_text">Invalid password or corrupted file.</string>
    <string name="common_error_invalid_checksum_file_text">Invalid checksum. File is corrupted.</string>
    <string name="common_enterTheName_text">Set &lt;b&gt;name&lt;/b&gt;.</string>
    <string name="common_enterThePassword_text">Set &lt;b&gt;password&lt;/b&gt;.</string>
    <string name="common_enterFileName_text">Enter File Name</string>
    <string name="common_fileNameAlreadyExists_text">File name &lt;b&gt;&lt;1&gt;&lt;/b&gt; already exists.</string>
    <string name="common_fileRenamed_text">File &lt;b&gt;&lt;1&gt;&lt;/b&gt; has been renamed to &lt;b&gt;&lt;2&gt;&lt;/b&gt;</string>
    <string name="common_fileFailedToRename">Failed to rename file &lt;b&gt;&lt;1&gt;&lt;/b&gt;</string>
    <string name="common_generatingKey_text">Generating Key</string>
    <string name="common_compressing_text">Compressing</string>
    <string name="common_encrypting_text">Encrypting</string>
    <string name="common_decompressing_text">Decompressing</string>
    <string name="common_decrypting_text">Decrypting</string>
    <string name="common_wiping_text">Wiping</string>
    <string name="common_current_text">Current</string>
    <string name="common_unlock_text">Unlock</string>
    <string name="common_locked_text">Locked</string>
    <string name="common_incorrectFile_text">Incorrect File</string>
    <string name="common_unknownAlgorithm_text">Unknown Algorithm</string>
    <string name="common_copyToClipboard_text">Copy to Clipboard</string>
    <string name="common_passwordCopiedToClipboard_text">Password has been copied to system clipboard.</string>
    <string name="common_copyToClipboardWarning"><![CDATA[<font face="times new roman" color="#BBBB77"><small><i><b>Note:</b> Be careful to use the system clipboard for sensitive data (like passwords) manipulation. Some applications can monitor the clipboard and even archive its content.</i></small></font>]]></string>
    <string name="common_xmlParsing_unexpectedElement">Unexpected Element</string>
    <string name="common_xmlParsing_incorrectSize">Incorrect Size</string>
    <string name="common_xmlParsing_incorrectData">Incorrect Data</string>
    <string name="common_xmlParsing_elementMissing">Mandatory Element Missing</string>
    <string name="main_passwordVaultButton">Password Vault</string>
    <string name="main_messageEncButton">Text Encryptor</string>
    <string name="main_fileEncButton">File/Dir Encryptor</string>
    <string name="main_otherUtils">Other Utils</string>
    <string name="main_settingsButton">Settings</string>
    <string name="main_helpButton">Help</string>
    <string name="main_exitButton">Exit</string>
    <string name="main_AvailableAlgorithmsText">&lt;br/&gt;&lt;b&gt;Available algorithms:&lt;/b&gt;</string>
    <string name="main_report_title">&lt;b&gt;Application Security Report:&lt;/b&gt;&lt;br/&gt;</string>
    <string name="main_firstStartup_text">First Start-Up: </string>
    <string name="main_lastStartup_text">Last Start-Up: </string>
    <string name="main_numberOfStartups_text">Start-Ups: </string>
    <string name="main_dbIntegrity_text">Database integrity: </string>
    <string name="fe_goButton">Encrypt/Decrypt</string>
    <string name="fe_goButtonEncFile">Encrypt File</string>
    <string name="fe_goButtonDecFile">Decrypt File</string>
    <string name="fe_goButtonEncDir">Encrypt Dir</string>
    <string name="fe_tip_1">Tip: Long click to Select folder (short file)</string>
    <string name="fe_tip_2">Tip: Delete File – select File/Folder, press Menu Button, choose Delete</string>
    <string name="fe_tip_3">Tip: Rename File – select File/Folder, press Menu Button, choose Rename</string>
    <string name="fe_selected_text">Selected:</string>
    <string name="fe_currentDir_text">Current Dir:</string>
    <string name="fe_emptyDir_text">Empty Folder</string>
    <string name="fe_question_cancel_title">Cancel</string>
    <string name="fe_question_cancel_question">Cancel current task?</string>
    <string name="fe_file_dialogTitle">File</string>
    <string name="fe_folder_dialogTitle">Folder</string>
    <string name="fe_deleteFile_dialogTitle">Delete File</string>
    <string name="fe_deleteFolder_dialogTitle">Delete Folder</string>
    <string name="fe_wipeFile_dialogTitle">Wipe File</string>
    <string name="fe_wipeFolder_dialogTitle">Wipe Folder</string>
    <string name="fe_zipFile_dialogTitle">Zip File</string>
    <string name="fe_zipFolder_dialogTitle">Zip Folder</string>
    <string name="fe_unzipFile_dialogTitle">Unzip File</string>
    <string name="fe_unzipFolder_dialogTitle">Unzip Folder</string>
    <string name="fe_fileactionDialog_deleteFile">Delete File</string>
    <string name="fe_fileactionDialog_deleteFolder">Delete Folder</string>
    <string name="fe_fileactionDialog_wipeFile">Wipe File</string>
    <string name="fe_fileactionDialog_wipeFolder">Wipe Folder</string>
    <string name="fe_fileactionDialog_renameFile">Rename File</string>
    <string name="fe_fileactionDialog_renameFolder">Rename Folder</string>
    <string name="fe_fileactionDialog_noFileSelected">No file selected.</string>
    <string name="fe_fileactionDialog_openFile">Open File</string>
    <string name="fe_fileactionDialog_sendFile">Send to</string>
    <string name="fe_fileDeleted">Selected file has been deleted.</string>
    <string name="fe_fileNotDeleted">Selected file cannot be deleted.</string>
    <string name="fe_fileReadOnly">This file is read only. No actions available.</string>
    <string name="fe_parentDirectoryReadOnly">Parent directory is read only. No actions available.</string>
    <string name="fe_directoryCannotBeSelected">This directory cannot be selected.</string>
    <string name="fe_fileRename">New File Name</string>
    <string name="fe_report_title">Report</string>
    <string name="fe_report_dec_title">Decryption Report</string>
    <string name="fe_report_enc_title">Encryption Report</string>
    <string name="fe_report_inputFile">Input file: &lt;b&gt;&lt;1&gt;&lt;/b&gt;</string>
    <string name="fe_report_outputFile">Output file: &lt;b&gt;&lt;1&gt;&lt;/b&gt;</string>
    <string name="fe_report_inputFolder">Input folder: &lt;b&gt;&lt;1&gt;&lt;/b&gt;</string>
    <string name="fe_report_outputFolder">Output folder: &lt;b&gt;&lt;1&gt;&lt;/b&gt;</string>
    <string name="fe_report_wiped">&lt;b&gt;Wiped:&lt;/b&gt;</string>
    <string name="fe_report_deleted">&lt;b&gt;Deleted:&lt;/b&gt;</string>
    <string name="fe_report_wipedFiles">Files - &lt;1&gt; out of &lt;2&gt;</string>
    <string name="fe_report_wipedFolders">Folders - &lt;1&gt; out of &lt;2&gt;</string>
    <string name="fe_report_crc_ok">CRC: OK</string>
    <string name="fe_report_crc_failed">CRC: FAILED</string>
    <string name="fe_integrity_error">Integrity Error in File(s):</string>
    <string name="fe_wipingTempFiles">Wiping Temp Files</string>
    <string name="fe_fileAction">File Action</string>
    <string name="fe_cannotPerformThisAction">No apps can perform this action</string>
    <string name="fe_message_wipe_interrupted_tempfiles">Temp Files Wiping cannot be aborted.</string>
    <string name="fe_message_wipe_interrupted_aftercurrent">Will be interrupted after the current file will be finished.</string>
    <string name="fe_message_wipe_folder_2GBlimit"><![CDATA[Sorry - Selected folder size is <1>. Wiping function is currently limited to 2GB.]]></string>
    <string name="fe_message_wipe_file_2GBlimit"><![CDATA[Sorry - Selected file size is <1>. Wiping function is currently limited to 2GB.]]></string>
    <string name="fe_compression_on"><![CDATA[Compression <b>ON</b>]]></string>
    <string name="fe_compression_off"><![CDATA[Compression <b>OFF</b>]]></string>
    <string name="me_encryptedToClipboard">Encrypted message has been copied to system clipboard.</string>
    <string name="me_decryptedToClipboard">Message has been copied to system clipboard.</string>
    <string name="me_decryptError">Incorrect password or corrupted message.</string>
    <string name="me_encHint">Text to Decrypt</string>
    <string name="me_decHint">Text to Encrypt</string>
    <string name="ou_passwordGenerator">Password Generator</string>
    <string name="ou_clipboardCleaner">Clipboard Cleaner</string>
    <string name="ou_algorithmBenchmark">Algorithm Benchmark</string>
    <string name="ou_applicationReport">Application Report</string>
    <string name="passwordGeneratorDialog_generate_text">Generate</string>
    <string name="passwordGeneratorDialog_charset_text">Char Set</string>
    <string name="passwordGeneratorDialog_lehgth_text">Length</string>
    <string name="passwordGeneratorDialog_set_text">Set</string>
    <string name="passwordGeneratorDialog_toClipboard_text">To Clipboard</string>
    <string name="passwordDialog_showPassword">  Show Password</string>
    <string name="passwordDialog_passwordShort">Short</string>
    <string name="passwordDialog_oldPasswordHint">current password</string>
    <string name="passwordDialog_passwordHint">password</string>
    <string name="passwordDialog_confirmPasswordHint">confirm password</string>
</resources>