<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/M_mainMain"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:layout_margin="0.0px"
	android:paddingTop="5.0dp"
	>
	<LinearLayout
		android:id="@+id/M_mainCentralWrapper"
		android:layout_height="fill_parent"
		android:layout_width="fill_parent"
		android:layout_above="@+id/M_bottomButtons"
		android:layout_alignParentTop="true"
		android:orientation="vertical"
		>
		<LinearLayout
			android:id="@+id/M_topButtons"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="0.0"
			android:layout_alignParentTop="true"
			android:orientation="vertical"
			>
			<Button
				android:text="@string/main_passwordVaultButton"
				android:layout_height="wrap_content"
				android:id="@+id/M_passwordVaultButton"
				android:layout_width="fill_parent"
				style="@style/CryptButtonBase"
				></Button>
			<Button
				android:text="@string/main_messageEncButton"
				android:id="@+id/M_messageEncButton"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:layout_above="@+id/M_passwordVaultButton"
				style="@style/CryptButtonBase"
				></Button>
			<Button
				android:text="@string/main_fileEncButton"
				android:id="@+id/M_fileEncButton"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				style="@style/CryptButtonBase"
				></Button>
		</LinearLayout>
		<ScrollView
			android:id="@+id/M_reportTextViewWrapper"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:layout_weight="0.0"
			android:layout_margin="5.0dp"
			android:fadeScrollbars="false"
			>
			<TextView
				android:id="@+id/M_reportTextView"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:padding="5.0dp"
				android:textColor="@color/grey_light"
				android:background="@drawable/d_textview_b"
				android:focusable="true"
				></TextView>
		</ScrollView>
	</LinearLayout>
	<LinearLayout
		android:id="@+id/M_bottomButtons"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:layout_weight="1.0"
		android:gravity="center_vertical"
		android:layout_alignParentBottom="true"
		>
		<Button
			android:text="@string/main_settingsButton"
			android:layout_height="wrap_content"
			android:id="@+id/M_settingsButton"
			android:layout_width="fill_parent"
			android:layout_weight="1.0"
			style="@style/ButtonSettings"
			android:ellipsize="end"
			></Button>
		<Button
			android:text="@string/main_helpButton"
			android:layout_height="wrap_content"
			android:id="@+id/M_helpButton"
			android:layout_width="fill_parent"
			android:layout_weight="1.0"
			style="@style/ButtonHelp"
			android:ellipsize="end"
			></Button>
		<Button
			android:text="@string/main_exitButton"
			android:layout_height="wrap_content"
			android:id="@+id/M_exitButton"
			android:layout_width="fill_parent"
			android:layout_weight="1.0"
			style="@style/ButtonExit"
			android:ellipsize="end"
			></Button>
	</LinearLayout>
</RelativeLayout>
