<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/PD_layout_root"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:paddingRight="2dp"
	android:fadeScrollbars="false"
	>
	<RelativeLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:paddingLeft="10dp"
		android:paddingRight="8dp"
		android:paddingBottom="10dp"
		android:paddingTop="0dp"
		>
		<TableLayout
			android:layout_height="wrap_content"
			android:layout_width="400dp"
			android:layout_weight="1.0"
			android:minWidth="200px"
			>
			<EditText
				android:text=""
				android:id="@+id/PD_passwordDialog_OldPassword"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:singleLine="true"
				android:password="true"
				android:maxLength="1024"
				android:hint="@string/passwordDialog_oldPasswordHint"
				></EditText>
			<EditText
				android:text=""
				android:id="@+id/PD_passwordEditText1"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:singleLine="true"
				android:password="true"
				android:maxLength="1024"
				android:hint="@string/passwordDialog_passwordHint"
				></EditText>
			<EditText
				android:text=""
				android:id="@+id/PD_passwordEditText2"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:singleLine="true"
				android:password="true"
				android:maxLength="1024"
				android:hint="@string/passwordDialog_confirmPasswordHint"
				></EditText>
			<LinearLayout
				android:id="@+id/PD_strengthMetter"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:padding="0dp"
				android:gravity="center"
				>
				<TextView
					android:text="@string/passwordDialog_passwordShort"
					android:id="@+id/PD_strengthText"
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:paddingRight="6dp"
					android:minWidth="50dp"
					></TextView>
				<ImageView
					android:src="@drawable/strength_metter_0"
					android:id="@+id/PD_strengthView"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:scaleType="fitXY"
					android:paddingRight="1dp"
					></ImageView>
			</LinearLayout>
			<CheckBox
				android:text="passwordCheckBox"
				android:id="@+id/PD_passwordCheckBox"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:nextFocusDown="@+id/PD_okButton"
				></CheckBox>
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				>
				<Button
					android:id="@+id/PD_okButton"
					android:text="@string/common_ok_text"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1.0"
					></Button>
				<Button
					android:id="@+id/PD_cancelButton"
					android:text="@string/common_cancel_text"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1.0"
					></Button>
			</LinearLayout>
		</TableLayout>
	</RelativeLayout>
</ScrollView>
