<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/OU_layout_root"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:layout_margin="0.0px"
	android:paddingTop="5.0dp"
	>
    <LinearLayout
		android:id="@+id/MainWrapper"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical"
		android:layout_above="@+id/OU_menuWrapper"
		android:paddingLeft="5dp"
		android:paddingRight="5dp"
		>
		<LinearLayout
			android:id="@+id/TopWrapper"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			>
			<Button
				android:text="@string/ou_passwordGenerator"
				android:layout_height="wrap_content"
				android:id="@+id/OU_PasswordGenerator"
				android:layout_width="fill_parent"
				style="@style/CryptButtonBase"
				></Button>
			<Button
				android:text="@string/ou_clipboardCleaner"
				android:layout_height="wrap_content"
				android:id="@+id/OU_ClipboardCleaner"
				android:layout_width="fill_parent"
				style="@style/CryptButtonBase"
				></Button>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/BottomWrapper"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			>
			<Button
				android:text="@string/ou_applicationReport"
				android:layout_height="wrap_content"
				android:id="@+id/OU_ApplicationReport"
				android:layout_width="fill_parent"
				style="@style/CryptButtonBase"
				></Button>
			<Button
				android:text="@string/ou_algorithmBenchmark"
				android:layout_height="wrap_content"
				android:id="@+id/OU_AlgorithmBenchmark"
				android:layout_width="fill_parent"
				style="@style/CryptButtonBase"
				></Button>
		</LinearLayout>
	</LinearLayout>
	<LinearLayout
		android:id="@+id/OU_menuWrapper"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_alignParentBottom="true"
		>
		<Button
			android:text=""
			android:id="@+id/OU_helpButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			style="@style/ButtonHelp"
			android:ellipsize="end"
			></Button>
	</LinearLayout>
</RelativeLayout>
