<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:paddingLeft="10dp"
	android:paddingRight="8dp"
	android:paddingBottom="10dp"
	android:paddingTop="0dp"
	>
	<LinearLayout
		android:id="@+id/PWVSLD_main"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		>
		<EditText
			android:text=""
			android:id="@+id/PWVSLD_passwordEditText"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:singleLine="true"
			android:password="true"
			android:maxLength="1024"
			android:hint="@string/passwordDialog_passwordHint"
			></EditText>
		<CheckBox
			android:text="@string/passwordDialog_showPassword"
			android:id="@+id/PWVSLD_showPasswordCheckBox"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:nextFocusDown="@+id/PD_okButton"
			></CheckBox>
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			>
			<Button
				android:id="@+id/PWVSLD_leaveButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				style="@style/ButtonBackTo"
				></Button>
			<Button
				android:id="@+id/PWVSLD_unlockButton"
				android:text="@string/common_unlock_text"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				style="@style/ButtonExpander"
			></Button>
		</LinearLayout>
	</LinearLayout>
</RelativeLayout>
