<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	>
	<LinearLayout
		android:id="@+id/ME_linearLayout1"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center_vertical"
		android:layout_alignParentTop="true"
		android:layout_marginTop="5dp"
		>
		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:layout_weight="0.35"
			android:gravity="center_vertical"
			>
			<Button
				android:id="@+id/ME_fromClipBoardDecButton"
				android:text="@string/common_paste_text"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				style="@style/ButtonArrowDown"
				android:layout_weight="0.5"
				android:ellipsize="end"
				></Button>
			<Button
				android:id="@+id/ME_toClipBoardDecButton"
				android:text="@string/common_copy_text"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				style="@style/ButtonArrowUp"
				android:layout_weight="0.5"
				android:ellipsize="end"
				></Button>
		</LinearLayout>
		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:layout_weight="0.65"
			android:gravity="center_vertical"
			>
			<FrameLayout
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:id="@+id/ME_hiddenFL03"
				android:layout_weight="0.5"
				>
			</FrameLayout>
			<Button
				android:text=""
				android:id="@+id/ME_helpButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				style="@style/ButtonHelp"
				></Button>
		</LinearLayout>
	</LinearLayout>
	<EditText
		android:text=""
		android:id="@+id/ME_decryptedEditText"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:layout_below="@+id/ME_linearLayout1"
		android:layout_above="@+id/ME_linearLayout3"
		android:scrollbars="vertical"
		android:gravity="top"
		android:minLines="1"
		android:hint="@string/me_decHint"
		></EditText>
	<LinearLayout
		android:id="@+id/ME_linearLayout3"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:layout_gravity="center"
		android:layout_centerInParent="true"
		android:gravity="center_vertical"
		>
		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:layout_weight="0.35"
			android:gravity="center_vertical"
			>
			<Button
				android:text="@string/common_encrypt_text"
				android:id="@+id/ME_encryptButton"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				style="@style/ButtonArrowDownRed"
				android:layout_weight="0.5"
				android:ellipsize="end"
				></Button>
			<Button
				android:text="@string/common_decrypt_text"
				android:id="@+id/ME_decryptButton"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				style="@style/ButtonArrowUp"
				android:layout_weight="0.5"
				android:ellipsize="end"
				></Button>
		</LinearLayout>
		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:layout_weight="0.65"
			android:gravity="center_vertical"
			>
			<FrameLayout
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:id="@+id/ME_hiddenFL02"
				android:layout_weight="0.9"
				>
			</FrameLayout>
			<Button
				android:text="@string/common_password_text"
				android:id="@+id/ME_passwordButton"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:layout_weight="0.1"
				android:layout_marginLeft="3dp"
				android:layout_marginRight="3dp"
				android:layout_marginTop="1dp"
				android:layout_marginBottom="1dp"
				android:ellipsize="end"
				></Button>
		</LinearLayout>
	</LinearLayout>
	<EditText
		android:id="@+id/ME_encryptedEditText"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:layout_below="@+id/ME_linearLayout3"
		android:layout_above="@+id/ME_linearLayout5"
		android:gravity="top"
		android:text=""
		android:scrollbars="vertical"
		android:hint="@string/me_encHint"
		></EditText>
	<LinearLayout
		android:id="@+id/ME_linearLayout5"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:layout_alignParentBottom="true"
		android:gravity="center_vertical"
		>
		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:layout_weight="0.35"
			android:gravity="center_vertical"
			>
			<Button
				android:id="@+id/ME_toClipBoardEncButton"
				android:text="@string/common_copy_text"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				style="@style/ButtonArrowDownRed"
				android:layout_weight="0.5"
				android:ellipsize="end"
				></Button>
			<Button
				android:id="@+id/ME_fromClipBoardEncButton"
				android:text="@string/common_paste_text"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				style="@style/ButtonArrowUpRed"
				android:layout_weight="0.5"
				android:ellipsize="end"
				></Button>
		</LinearLayout>
		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:layout_weight="0.65"
			android:gravity="center_vertical"
			>
			<FrameLayout
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:layout_weight="0.9"
				>
			</FrameLayout>
			<Button
				android:id="@+id/ME_moreOptionsButton"
				android:text="@string/common_moreDots_text"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:layout_weight="0.1"
				style="@style/ButtonMore"
				android:ellipsize="end"
				></Button>
		</LinearLayout>
	</LinearLayout>
</RelativeLayout>
